lu kebiasaan kalo ada noise suka kaga dihapus sampe project jadi, hapus woy

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -28,28 +28,28 @@
     <div class="form-box signup-box" *ngIf="isSignup">
       <h2>Sign Up</h2>
 
-      // nama lengkap
+      <!-- // nama lengkap -->
       <ion-item>
         <ion-icon name="person-outline" slot="start"></ion-icon>
         <ion-input type="text" placeholder="Nama Lengkap"></ion-input>
       </ion-item>
-      // nama lengkap
 
-      // nomor telepon  
+
+      <!-- // nomor telepon   -->
       <ion-item>
         <ion-icon name="call-outline" slot="start"></ion-icon>
         <ion-input type="tel" placeholder="Nomor Telepon"></ion-input>
       </ion-item>
-      // nomor telepon
+ 
 
-      // alamat
+      <!-- // alamat -->
       <ion-item>
         <ion-icon name="home-outline" slot="start"></ion-icon>
         <ion-input type="text" placeholder="Alamat Lengkap"></ion-input>
       </ion-item>
-      // alamat
 
-      // tanggal lahir
+
+      <!-- // tanggal lahir -->
       <ion-item>
         <ion-icon name="calendar-outline" slot="start"></ion-icon>
         <ion-input id="birthDateInput" [value]="birthDateDisplay" placeholder="Tanggal Lahir" readonly></ion-input>
@@ -64,7 +64,7 @@
           </ng-template>
         </ion-popover>
       </ion-item>
-      // tanggal lahir
+
       
       
       <ion-item>
