--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- MENU KIRI -->
 <ion-menu side="start" menuId="mainMenu" contentId="main-content">
   <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -18,7 +18,7 @@
 <!-- MENU KANAN (SETTING) -->
 <ion-menu side="end" menuId="settingsMenu" contentId="main-content">
   <ion-header>
-    <ion-toolbar color="secondary">
+    <ion-toolbar color="">
       <ion-title>Pengaturan</ion-title>
     </ion-toolbar>
   </ion-header>
