--- a/src/app/loading-screen/loading-screen.page.html
+++ b/src/app/loading-screen/loading-screen.page.html
@@ -3,7 +3,7 @@
 
 <ion-content class="ion-padding" fullscreen>
   <div class="loading-container">
-    <img src="assets/icon/Icon.png" alt="Logo" width="150">
+    <img src="assets/icon/Logo_GoRent_all_dengan_Desain_Abstrak-removebg-preview 1.png" alt="Logo" width="150">
     <ion-spinner name="crescent" color="primary"></ion-spinner>
     <p>Memuat aplikasi...</p>
   </div>
