--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,9 +1,9 @@
 .login-background {
-  --background: linear-gradient(135deg, #064420 0%, #0FAA50 100%);
+  --background: linear-gradient(135deg, #B8ECBC 0%, #014001 100%);
 }
 
 ion-content {
-  --background: linear-gradient(135deg, #064420 0%, #0FAA50 100%);
+  --background: linear-gradient(135deg, #064420 0%, #B8ECBC 100%);
   display: flex;
   justify-content: center;
   align-items: center;
