--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,12 @@
 <ion-header>
-  <ion-toolbar color="success" class="custom-toolbar">
+  <ion-toolbar class="custom-toolbar">
+    <div class="logo-header">
+        <img src="assets/icon/logo1.png" alt="Logo" class="logo-header" />
+      </div>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-
-    <ion-title>
-      <img src="assets/icon/Icon.png" alt="Logo" class="logo-header" />
-    </ion-title>
-
+    
     <ion-buttons slot="end">
       <ion-button>
         <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
@@ -23,8 +22,12 @@
   </div>
 
   <!-- Filter mobil -->
-  <div class="filter-container">
-    <ion-label>Car Type</ion-label>
+  <ion-card class="filter-container">
+  <ion-card-header>
+    <ion-card-title>Car Type</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
     <div class="car-type-buttons">
       <button class="car-button">
         <img src="assets/cars/tesla.png" alt="Tesla" />
@@ -43,7 +46,9 @@
         <span>BMW</span>
       </button>
     </div>
-  </div>
+  </ion-card-content>
+</ion-card>
+
 
   <!-- Box Populer Car -->
   <div class="populer-car-container">
