--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar class="custom-toolbar">
     <div class="logo-header">
-        <img src="assets/icon/logo1.png" alt="Logo" class="logo-header" />
-      </div>
+      <img src="assets/icon/logo1.png" alt="Logo" class="logo-img" />
+    </div>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    
+
     <ion-buttons slot="end">
       <ion-button>
         <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
@@ -16,6 +16,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+
   <!-- Gambar tank -->
   <div class="image-container">
     <img src="assets/image/tank.jpeg" alt="Honda BR-V" />
@@ -23,54 +24,59 @@
 
   <!-- Filter mobil -->
   <ion-card class="filter-container">
-  <ion-card-header>
-    <ion-card-title>Car Type</ion-card-title>
-  </ion-card-header>
+    <ion-card-header>
+      <ion-card-title>Car Type</ion-card-title>
+    </ion-card-header>
 
-  <ion-card-content>
-    <div class="car-type-buttons">
-      <button class="car-button">
-        <img src="assets/cars/tesla.png" alt="Tesla" />
-        <span>Tesla</span>
-      </button>
-      <button class="car-button">
-        <img src="assets/cars/nissan.png" alt="Nissan" />
-        <span>Nissan</span>
-      </button>
-      <button class="car-button">
-        <img src="assets/cars/toyota.png" alt="Toyota" />
-        <span>Toyota</span>
-      </button>
-      <button class="car-button">
-        <img src="assets/cars/bmw.png" alt="BMW" />
-        <span>BMW</span>
-      </button>
-    </div>
-  </ion-card-content>
-</ion-card>
+    <ion-card-content>
+      <div class="car-type-buttons">
+        <button class="car-button">
+          <img src="assets/icon/Logo Tesla.png" alt="Tesla" />
+          <span>Tesla</span>
+        </button>
+        <button class="car-button">
+          <img src="assets/cars/nissan.png" alt="Nissan" />
+          <span>Nissan</span>
+        </button>
+        <button class="car-button">
+          <img src="assets/cars/toyota.png" alt="Toyota" />
+          <span>Toyota</span>
+        </button>
+        <button class="car-button">
+          <img src="assets/cars/bmw.png" alt="BMW" />
+          <span>BMW</span>
+        </button>
+      </div>
+    </ion-card-content>
+  </ion-card>
 
-
-  <!-- Box Populer Car -->
+  <!-- Populer Car Section -->
   <div class="populer-car-container">
     <h2>Populer Car</h2>
-    <!-- Contoh kartu mobil -->
-    <ion-card class="car-card">
-      <ion-card-header>
-        <ion-chip color="danger" outline>Toyota</ion-chip>
-        <ion-badge color="success" class="status-badge">Tersedia</ion-badge>
-      </ion-card-header>
-      <ion-card-content>
-        <div class="car-info">
-          <img src="assets/images/avanza-orange.png" alt="Avanza" />
-          <div class="car-details">
-            <h3>Avanza</h3>
-            <p>MPV • 2015 • 7 seats</p>
-            <p class="price">Rp 350.000 / 24 Jam</p>
-            <ion-button color="warning" expand="block">Sewa Sekarang</ion-button>
-          </div>
-        </div>
-      </ion-card-content>
-    </ion-card>
-    <!-- Tambah kartu mobil lain sesuai kebutuhan -->
+
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" size-md="6">
+          <ion-card class="car-card">
+            <ion-card-header>
+              <ion-chip color="danger" outline>Toyota</ion-chip>
+              <ion-badge color="success" class="status-badge">Tersedia</ion-badge>
+            </ion-card-header>
+            <ion-card-content>
+              <div class="car-info">
+                <img src="assets/images/avanza-orange.png" alt="Avanza" />
+                <div class="car-details">
+                  <h3>Avanza</h3>
+                  <p>MPV • 2015 • 7 seats</p>
+                  <p class="price">Rp 350.000 / 24 Jam</p>
+                  <ion-button color="warning" expand="block">Sewa Sekarang</ion-button>
+                </div>
+              </div>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <!-- Tambah ion-col lainnya jika perlu -->
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
