--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,7 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+  --ion-color-primary: #4CAF50; /* Hijau */
+  --ion-color-danger: #F44336;  /* Merah */
+}
